Added dependencies for restserver.